[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Fonts/Pixeled_5.tres" type="DynamicFont" id=1]
[ext_resource path="res://Options.gd" type="Script" id=2]

[node name="Options" type="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 49.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Button" parent="VBoxContainer"]
margin_right = 55.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Music:"

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 55.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 1 )
text = "Next Song"

[node name="Back" type="Button" parent="."]
margin_left = -64.5415
margin_top = 33.6738
margin_right = -52.5415
margin_bottom = 53.6738
custom_fonts/font = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
